# shaoli-flashlink

./: .gitignore  README.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: course.json  default.json  pet.json  whiteboard.json
src-tauri/resources/rules/: bleachbit.json  rules_ai_tools.json  rules_cn_apps.json  rules_dev_tools.json  winapp2.json
src-tauri/scripts/: chaoxing.js  convert_to_pdf.ps1
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/cleaner/: clean.rs  mft.rs  mod.rs  protect.rs  rules.rs  scan.rs  uninstall.rs
src-tauri/src/course/: mod.rs  platform.rs  qbank.rs  window.rs
src-tauri/src/network/: adapter.rs  dns.rs  latency.rs  mod.rs  public_ip.rs  speed.rs
src-tauri/src/pet/: commands.rs  mod.rs  storage.rs
src-tauri/src/qzone/: api.rs  auth.rs  export.rs  mod.rs  models.rs  parser.rs
src-tauri/src/srun/: auth.rs  base64.rs  mod.rs  xencode.rs
src-tauri/src/system/: autostart.rs  config.rs  elevate.rs  hosts.rs  mod.rs  school.rs
src-tauri/src/utils/: error.rs  mod.rs
src-tauri/src/whiteboard/: commands.rs  mod.rs  storage.rs
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/public/pet/: pet-engine.js  pet.html
ui/public/whiteboard/: board-sync.js  whiteboard.html
ui/src/: App.vue  main.ts
ui/src/components/: BezelCard.vue  BtnIsland.vue  ConvertPanel.vue  EditorialLabel.vue  InputField.vue  PageHelp.vue
ui/src/styles/: main.css
ui/src/types/: index.ts
ui/src/views/: CleanerView.vue  ConvertView.vue  MoreView.vue  (+7 more)
(+41 files in other folders)
