[package]
name = "shaoli-flashlink"
version = "3.0.0"
edition = "2021"
description = "绍理闪连 V3.0 - 校园网自动登录"
authors = ["回"]

[lib]
name = "shaoli_flashlink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
dirs = "6"
rand = "0.8"
webbrowser = "1"
scraper = "0.21"
rust_xlsxwriter = "0.95"
regex = "1"
chrono = "0.4"
urlencoding = "2"
walkdir = "2"
winreg = "0.52"
sysinfo = "0.31"
shellwords = "1"
trash = "4"
lnk = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
zip = "2"
calamine = "0.26"
quick-xml = "0.37"
strsim = "0.10"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
